details pages css: the text alignement and header too. fix for the 3 dots.

--- a/src/assets/styles/cmps/_track-preview.scss
+++ b/src/assets/styles/cmps/_track-preview.scss
@@ -61,7 +61,7 @@
 .track-name{
     font-size: 1rem;
     color: white;
-    text-align: center;
+    //text-align: center;
     flex: 1;
     text-decoration: none; /* Ensure links within these elements also have no underline */
     font-family: SpotifyMixUI, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, var(--fallback-fonts, sans-serif);;
@@ -90,10 +90,16 @@
     font-size: 0.875rem;
 }
 
+.track-preview-album{
+    // white-space: nowrap;
+    // overflow-x: hidden !important;
+    // text-overflow: ellipsis;
+}
+
 .track-number, .track-album, .track-date-added, .track-artist{
     font-size: 1rem;
     color: #b3b3b3;
-    text-align: center;
+    //text-align: center;
     flex: 1;
     text-decoration: none; /* Ensure links within these elements also have no underline */
 }
@@ -115,6 +121,7 @@
     white-space: nowrap;
     overflow-x: hidden !important;
     text-overflow: ellipsis;
+    width: 100%;
 }
 
 .track-duration {
